--- a/src/main/resources/views/reg.html
+++ b/src/main/resources/views/reg.html
@@ -10,8 +10,16 @@
     <h2>Регистрация в систему</h2>
     <form method="POST" action="/reg">
         <div class="form-group">
+            <label for="surname">Фамилия:</label>
+            <input type="text" id="surname" name="surname" required>
+        </div>
+        <div class="form-group">
             <label for="name">Имя:</label>
-            <input type="text" id="name" name="name" required autocomplete="given-name">
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+        <label for="patronymic">Отчество*:</label>
+        <input type="text" id="patronymic" name="patronymic">
         </div>
         <div class="form-group">
             <label for="email">Почта:</label>
@@ -19,7 +27,7 @@
         </div>
         <div class="form-group">
             <label for="password">Пароль:</label>
-            <input type="password" id="password" name="password" required autocomplete="new-password">
+            <input type="password" id="password" name="password" required >
         </div>
         <button type="submit" class="submit-button">Зарегистрироваться</button>
     </form>
