--- a/src/main/resources/views/reg.html
+++ b/src/main/resources/views/reg.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" th:href="@{/static/css/style.css}">
 </head>
 <body>
+<header>
+    <a href="home" class="logo">COORDIS</a>
+    <div th:if="${email == null}" class="auth-buttons">
+        <a href="auth">Вход</a> |
+        <a href="reg">Регистрация</a>
+    </div>
+</header>
 <div class="auth-container">
     <h2>Регистрация в систему</h2>
     <form method="POST" action="/reg">
