--- a/src/main/resources/views/reg.html
+++ b/src/main/resources/views/reg.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <a href="home" class="logo">COORDIS</a>
+    <a href="/home" class="logo">COORDIS</a>
     <div th:if="${email == null}" class="auth-buttons">
         <a href="auth">Вход</a> |
         <a href="reg">Регистрация</a>
