--- a/src/main/resources/views/projectsCreate.html
+++ b/src/main/resources/views/projectsCreate.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <a href="home" class="logo">COORDIS</a>
+    <a href="/home" class="logo">COORDIS</a>
     <div th:if="${email != null}" class="auth-buttons, nav-right">
         <h3>Привет, <span th:text="${firstName}">Пользователь</span>!</h3>
         <h3>Роль: <span th:text="${role}">Гость</span></h3>
